--- a/views/access/styles/index.css
+++ b/views/access/styles/index.css
@@ -9,16 +9,16 @@
 
 body {
   width: 100%;
-  height: 100vh;
+  height: 100%;
   position: relative;
 }
 
 main {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   display: grid;
   place-items: center;
-  background: url("../img/wall.jpeg") no-repeat;
+  background: url("../../img/wall.jpeg") no-repeat;
   background-size: cover;
   background-position: center;
 }
@@ -27,12 +27,12 @@ main .container {
   flex-direction: column;
   align-items: center;
   background: rgba(250, 250, 250, 0.99);
-  width: 600px;
-  height: 550px;
-  padding: 55px 40px 35px;
+  max-width: 600px;
+  max-height: 550px;
+  padding: 50px 40px 35px;
   border: 1px solid #090909;
   border-radius: 20px;
-  box-shadow: 0 0 5px #090909;
+  box-shadow: 0 0 5px rgba(9, 9, 9, 0.3);
 }
 main .container h1 {
   font-size: 3em;
@@ -58,20 +58,17 @@ main .container .p_sign_in, main .container .p_sign_up {
   font-size: 1em;
   text-align: center;
   font-family: "League Spartan", sans-serif;
-  margin-top: 18px;
+  margin-top: 15px;
   color: #090909;
 }
 main .container .p_sign_in a, main .container .p_sign_up a {
   text-decoration: none;
 }
-main .container .p_sign_up {
-  margin-top: 33px;
-}
 main .container .sign_up {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   width: 100%;
-  height: 300px;
+  height: 100%;
   gap: 20px;
   margin-top: 20px;
 }
@@ -166,7 +163,6 @@ main .container .sign_in div input {
   width: 100%;
   height: 100%;
   font-size: 1.5em;
-  background: #fafafa;
   color: #090909;
   padding: 0 20px;
   border: 1px solid #090909;
@@ -183,7 +179,7 @@ main .container .sign_in div input[type=submit] {
   cursor: pointer;
 }
 main .container .sign_in div input[type=submit]:hover {
-  background: rgba(9, 9, 9, 0.98);
+  background: rgba(9, 9, 9, 0.95);
 }
 main .container .sign_in div input[type=submit]:active {
   background: #090909;
