--- a/views/access/styles/index.scss
+++ b/views/access/styles/index.scss
@@ -13,17 +13,17 @@ $black: #090909;
 
 body {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     position: relative;
 }
 
 main {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: grid;
     place-items: center;
 
-    background: url('../img/wall.jpeg') no-repeat;
+    background: url('../../img/wall.jpeg') no-repeat;
     background-size: cover;
     background-position: center;
 
@@ -34,15 +34,15 @@ main {
 
         background: rgba($white, 0.99);
 
-        width: 600px;
-        height: 550px;
+        max-width: 600px;
+        max-height: 550px;
 
-        padding: 55px 40px 35px;
+        padding: 50px 40px 35px;
 
         border: 1px solid $black;
         border-radius: 20px;
 
-        box-shadow: 0 0 5px $black;
+        box-shadow: 0 0 5px rgba($black, 0.3);
 
         h1 {
             font-size: 3em;
@@ -71,7 +71,7 @@ main {
             font-size: 1em;
             text-align: center;
             font-family: 'League Spartan', sans-serif;
-            margin-top: 18px;
+            margin-top: 15px;
             color: $black;
 
             a {
@@ -79,15 +79,11 @@ main {
             }
         }
 
-        .p_sign_up {
-            margin-top: 33px;
-        }
-
         .sign_up {
             display: grid;
             grid-template-columns: repeat(2, 1fr);
             width: 100%;
-            height: 300px;
+            height: 100%;
 
             gap: 20px;
             margin-top: 20px;
@@ -207,7 +203,6 @@ main {
 
                     font-size: 1.5em;
 
-                    background: $white;
                     color: $black;
 
                     padding: 0 20px;
@@ -231,7 +226,7 @@ main {
                     cursor: pointer;
 
                     &:hover {
-                        background: rgba($black, 0.98);
+                        background: rgba($black, 0.95);
                     }
 
                     &:active {
