--- a/styles/index.css
+++ b/styles/index.css
@@ -18,7 +18,7 @@ main {
   height: 100vh;
   display: grid;
   place-items: center;
-  background: url("../../img/wall.jpeg") no-repeat;
+  background: url("../img/wall.jpeg") no-repeat;
   background-size: cover;
   background-position: center;
 }
@@ -27,6 +27,7 @@ main .container {
   flex-direction: column;
   align-items: center;
   background: rgba(250, 250, 250, 0.99);
+  width: 600px;
   max-width: 600px;
   max-height: 550px;
   padding: 50px 40px 35px;
