--- a/styles/index.scss
+++ b/styles/index.scss
@@ -23,7 +23,7 @@ main {
     display: grid;
     place-items: center;
 
-    background: url('../../img/wall.jpeg') no-repeat;
+    background: url('../img/wall.jpeg') no-repeat;
     background-size: cover;
     background-position: center;
 
@@ -34,6 +34,7 @@ main {
 
         background: rgba($white, 0.99);
 
+        width: 600px;
         max-width: 600px;
         max-height: 550px;
 
