--- a/styles/admin.css
+++ b/styles/admin.css
@@ -123,7 +123,8 @@ body {
   align-items: center;
   gap: 0.7rem;
 }
-.container section header div .button_container button {
+.container section header div .button_container button,
+.container section header div .button_container a {
   width: 40px;
   height: 40px;
   outline: 0;
@@ -133,14 +134,20 @@ body {
   font-size: 1.2rem;
   border-radius: 5px;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
 }
-.container section header div .button_container button:nth-last-child(1) {
+.container section header div .button_container button:nth-last-child(1),
+.container section header div .button_container a:nth-last-child(1) {
   margin-left: 10px;
 }
 .container section header div .img_container {
   width: 45px;
   height: 45px;
   border-radius: 5px;
+  position: relative;
 }
 .container section header div .img_container img {
   width: 100%;
@@ -148,6 +155,57 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
   border-radius: 5px;
+}
+.container section header div .img_container .dropdown_nav {
+  position: absolute;
+  top: 3.5rem;
+  right: 0;
+  width: 10rem;
+  height: 5rem;
+  background: white;
+  display: none;
+  flex-direction: column;
+  align-items: flex-end;
+  justify-content: flex-end;
+  border: 2px solid #4d44b5;
+  border-top: 0;
+  border-radius: 5px;
+}
+.container section header div .img_container .dropdown_nav::after {
+  content: "";
+  width: 30px;
+  height: 30px;
+  background: white;
+  border-radius: 100% 0% 0% 100%/100% 0% 100% 0%;
+  position: absolute;
+  top: -0.3rem;
+  right: 0;
+}
+.container section header div .img_container .dropdown_nav a {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-decoration: none;
+  color: #4d44b5;
+  outline: 0;
+  margin: 0;
+  padding: 0;
+  padding: 0 20px;
+  font-size: 1.2rem;
+  z-index: 10;
+}
+.container section header div .img_container .dropdown_nav a:hover {
+  background: rgba(0, 0, 0, 0.1);
+}
+.container section header div .img_container .dropdown_nav a:active {
+  background: rgba(0, 0, 0, 0.2);
+}
+.container section header div .img_container .dropdown_nav a svg {
+  fill: #303972;
+  font-size: 16px;
+  margin-right: 30px;
 }
 .container section main {
   margin-top: 4.5rem;
@@ -163,6 +221,7 @@ body {
 .container section main .main_left .profile_card {
   width: 100%;
   height: 30rem;
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.1);
 }
 .container section main .main_left .profile_card .top {
   width: 100%;
@@ -209,12 +268,13 @@ body {
 .container section main .main_left .profile_card .bottom .img_container img {
   position: absolute;
   top: -4rem;
-  z-index: 150;
+  z-index: 10;
   width: 9rem;
   -o-object-fit: contain;
      object-fit: contain;
   border-radius: 50%;
   border: 5px solid white;
+  cursor: pointer;
 }
 .container section main .main_left .profile_card .bottom .img_container div {
   width: -moz-fit-content;
@@ -359,6 +419,11 @@ body {
   width: 50px;
   height: 50px;
   border-radius: 50%;
+  border: 2px solid #4d44b5;
+  transition: 0.3s ease;
+}
+.container section main .main_right .subject .desc .img_container:hover {
+  border: 1px solid #4d44b5;
 }
 .container section main .main_right .subject .desc .img_container img {
   width: 100%;
@@ -366,4 +431,5 @@ body {
   -o-object-fit: contain;
      object-fit: contain;
   border-radius: 50%;
+  cursor: pointer;
 }/*# sourceMappingURL=admin.css.map */
