--- a/styles/admin.scss
+++ b/styles/admin.scss
@@ -159,7 +159,8 @@ body {
 
                     gap: 0.7rem;
 
-                    button {
+                    button,
+                    a {
                         &:nth-last-child(1) {
                             margin-left: 10px;
                         }
@@ -176,6 +177,11 @@ body {
                         border-radius: 5px;
 
                         cursor: pointer;
+
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        text-decoration: none;
                     }
                 }
 
@@ -183,12 +189,78 @@ body {
                     width: 45px;
                     height: 45px;
                     border-radius: 5px;
+                    position: relative;
 
                     img {
                         width: 100%;
                         height: 100%;
                         object-fit: cover;
                         border-radius: 5px;
+                    }
+
+                    .dropdown_nav {
+                        &::after {
+                            content: "";
+                            width: 30px;
+                            height: 30px;
+                            background: white;
+                            border-radius: 100% 0% 0% 100% / 100% 0% 100% 0%;
+                            position: absolute;
+                            top: -0.3rem;
+                            right: 0;
+                        }
+                        position: absolute;
+                        top: 3.5rem;
+                        right: 0;
+
+                        width: 10rem;
+                        height: 5rem;
+
+                        background: white;
+
+                        display: none;
+                        flex-direction: column;
+                        align-items: flex-end;
+                        justify-content: flex-end;
+
+                        border: 2px solid #4d44b5;
+                        border-top: 0;
+                        border-radius: 5px;
+
+                        a {
+                            width: 100%;
+                            height: 100%;
+
+                            display: flex;
+                            align-items: center;
+                            justify-content: space-between;
+
+                            text-decoration: none;
+                            color: #4d44b5;
+
+                            outline: 0;
+                            margin: 0;
+                            padding: 0;
+
+                            padding: 0 20px;
+
+                            font-size: 1.2rem;
+                            z-index: 10;
+
+                            &:hover {
+                                background: rgba(black, 0.1);
+                            }
+
+                            &:active {
+                                background: rgba(black, 0.2);
+                            }
+
+                            svg {
+                                fill: #303972;
+                                font-size: 16px;
+                                margin-right: 30px;
+                            }
+                        }
                     }
                 }
             }
@@ -212,6 +284,7 @@ body {
                 .profile_card {
                     width: 100%;
                     height: 30rem;
+                    box-shadow: 0 0 8px rgba(black, 0.1);
 
                     .top {
                         width: 100%;
@@ -268,15 +341,16 @@ body {
 
                         .img_container {
                             width: fit-content;
-                            
+
                             img {
                                 position: absolute;
                                 top: -4rem;
-                                z-index: 150;
+                                z-index: 10;
                                 width: 9rem;
                                 object-fit: contain;
                                 border-radius: 50%;
                                 border: 5px solid white;
+                                cursor: pointer;
                             }
 
                             div {
@@ -462,12 +536,19 @@ body {
                             width: 50px;
                             height: 50px;
                             border-radius: 50%;
+                            border: 2px solid #4d44b5;
+                            transition: 0.3s ease;
+
+                            &:hover {
+                                border: 1px solid #4d44b5;
+                            }
 
                             img {
                                 width: 100%;
                                 height: 100%;
                                 object-fit: contain;
                                 border-radius: 50%;
+                                cursor: pointer;
                             }
                         }
                     }
