--- a/styles/index.scss
+++ b/styles/index.scss
@@ -23,7 +23,7 @@ main {
     display: grid;
     place-items: center;
 
-    background: url("../img/wall.jpeg") no-repeat;
+    background: url("../img/southland_college_bg.jpg") no-repeat;
     background-size: cover;
     background-position: center;
 
