--- a/styles/dashboard.css
+++ b/styles/dashboard.css
@@ -222,24 +222,127 @@ body {
 }
 .container section main .header {
   width: 100%;
-  height: 2rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   align-items: center;
   margin-bottom: 30px;
 }
 .container section main .header button {
   outline: 0;
-  border: 1px solid #101010;
-  color: #f5f5f5;
-  background: lightslategray;
-  padding: 8px;
+  border: 1px solid #4d44b5;
+  color: #4d44b5;
+  background: transparent;
+  padding: 12px 12px;
   font-size: 0.9rem;
   font-weight: 600;
   cursor: pointer;
 }
+.container section main .header button i {
+  padding: 0 5px 0 0;
+}
 .container section main .header button:hover {
   box-shadow: 0 0 8px rgba(16, 16, 16, 0.2);
+  background: #4d44b5;
+  color: #fff;
+}
+.container section main .modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.container section main .modal .modal_content {
+  background-color: #fefefe;
+  margin: 10% auto;
+  width: 45%;
+}
+.container section main .modal .modal_content .close {
+  color: #fff;
+  font-size: 35px;
+  font-weight: bold;
+  padding: 0;
+  line-height: 0.7;
+}
+.container section main .modal .modal_content .close:hover,
+.container section main .modal .modal_content .close:focus {
+  color: red;
+  text-decoration: none;
+  cursor: pointer;
+}
+.container section main .modal .modal_content .top {
+  width: 100%;
+  height: 3.5rem;
+  background: #4d44b5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 12px;
+  color: #fff;
+}
+.container section main .modal .modal_content .middle {
+  width: 100%;
+  height: 15rem;
+  background: #fff;
+  padding: 10px 12px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 55px);
+  gap: 15px;
+  row-gap: 20px;
+}
+.container section main .modal .modal_content .middle .mid_input {
+  display: flex;
+  flex-direction: column;
+}
+.container section main .modal .modal_content .middle .mid_input label {
+  font-size: 16px;
+  font-weight: 600;
+  padding-bottom: 5px;
+  padding-left: 2px;
+}
+.container section main .modal .modal_content .middle .mid_input input {
+  width: 100%;
+  height: 100%;
+  padding: 5px 8px;
+  font-size: 16px;
+  border: 1px solid #101010;
+}
+.container section main .modal .modal_content .middle .mid_input:nth-last-child(1) {
+  grid-area: 1 span/2 span;
+}
+.container section main .modal .modal_content .middle .mid_input:nth-last-child(2) {
+  grid-area: 1 span/2 span;
+}
+.container section main .modal .modal_content .bottom {
+  width: 100%;
+  height: 3.5rem;
+  background: #4d44b5;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px 12px;
+  gap: 15px;
+}
+.container section main .modal .modal_content .bottom input[type=submit] {
+  background: transparent;
+  width: 150px;
+  height: 40px;
+  padding: 8px;
+  border: 1px solid #fff;
+  color: #303972;
+  transition: 0.2s ease;
+  background: #e6ebee;
+  font-size: 20px;
+}
+.container section main .modal .modal_content .bottom input[type=submit]:hover {
+  background: #303972;
+  color: white;
 }
 .container section main table {
   width: 100%;
@@ -259,6 +362,16 @@ body {
   text-align: start;
   border: 1px solid #101010;
   padding: 15px;
+  overflow-x: auto;
+}
+.container section main table ::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+  border: 1px solid #101010;
+}
+.container section main table ::-webkit-scrollbar-thumb:horizontal {
+  background: #303972;
+  border-radius: 10px;
 }
 .container section main table .flex_container {
   display: flex;
@@ -273,25 +386,150 @@ body {
   border-radius: 50%;
   border: 1px solid #101010;
 }
-.container section main table .flex_container button {
+.container section main table .flex_container button,
+.container section main table .flex_container a {
+  border: 1px solid #fff;
+  background: #4d44b5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 40px;
   background: 0;
   outline: 0;
-  padding: 5px;
+  padding: 5px 12px;
   font-size: 0.95rem;
   cursor: pointer;
   transition: 0.1s ease;
 }
-.container section main table .flex_container button:nth-child(1) {
+.container section main table .flex_container button i,
+.container section main table .flex_container a i {
+  padding: 0 5px 0 0;
+}
+.container section main table .flex_container button:nth-child(1),
+.container section main table .flex_container a:nth-child(1) {
   color: #4d44b5;
   border: 1px solid #4d44b5;
 }
-.container section main table .flex_container button:nth-child(2) {
+.container section main table .flex_container button:nth-child(1):hover,
+.container section main table .flex_container a:nth-child(1):hover {
+  background: #4d44b5;
+  color: white;
+}
+.container section main table .flex_container button:nth-child(2),
+.container section main table .flex_container a:nth-child(2) {
   color: rgb(236, 84, 84);
   border: 1px solid rgb(236, 84, 84);
 }
-.container section main table .flex_container button:hover {
+.container section main table .flex_container button:nth-child(2):hover,
+.container section main table .flex_container a:nth-child(2):hover {
+  background: rgb(236, 84, 84);
+  color: white;
+}
+.container section main table .flex_container button:hover,
+.container section main table .flex_container a:hover {
   box-shadow: 0 0 8px rgba(16, 16, 16, 0.2);
+}
+.container section main table .flex_container .modal2 {
+  display: block;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0, 0, 0);
+  background-color: rgba(0, 0, 0, 0.4);
+}
+.container section main table .flex_container .modal2 .modal_content {
+  background-color: #fefefe;
+  margin: 10% auto;
+  width: 45%;
+}
+.container section main table .flex_container .modal2 .modal_content .close2 {
+  color: #fff;
+  font-size: 35px;
+  font-weight: bold;
+  padding: 0;
+  line-height: 0.7;
+  text-decoration: none;
+  border: 0;
+}
+.container section main table .flex_container .modal2 .modal_content .close2:hover,
+.container section main table .flex_container .modal2 .modal_content .close2:focus {
+  color: red;
+  cursor: pointer;
+  background: transparent;
+  box-shadow: 0 0 0;
+}
+.container section main table .flex_container .modal2 .modal_content .top {
+  width: 100%;
+  height: 3.5rem;
+  background: #4d44b5;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 12px;
+  color: #fff;
+}
+.container section main table .flex_container .modal2 .modal_content .middle {
+  width: 100%;
+  height: 15rem;
+  background: #fff;
+  padding: 10px 12px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(3, 55px);
+  gap: 15px;
+  row-gap: 20px;
+}
+.container section main table .flex_container .modal2 .modal_content .middle .mid_input {
+  display: flex;
+  flex-direction: column;
+}
+.container section main table .flex_container .modal2 .modal_content .middle .mid_input label {
+  font-size: 16px;
+  font-weight: 600;
+  padding-bottom: 5px;
+  padding-left: 2px;
+}
+.container section main table .flex_container .modal2 .modal_content .middle .mid_input input {
+  width: 100%;
+  height: 100%;
+  padding: 5px 8px;
+  font-size: 16px;
+  border: 1px solid #101010;
+}
+.container section main table .flex_container .modal2 .modal_content .middle .mid_input:nth-last-child(1) {
+  grid-area: 1 span/2 span;
+}
+.container section main table .flex_container .modal2 .modal_content .middle .mid_input:nth-last-child(2) {
+  grid-area: 1 span/2 span;
+}
+.container section main table .flex_container .modal2 .modal_content .bottom {
+  width: 100%;
+  height: 3.5rem;
+  background: #4d44b5;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 10px 12px;
+  gap: 15px;
+}
+.container section main table .flex_container .modal2 .modal_content .bottom input[type=submit] {
+  background: transparent;
+  width: 150px;
+  height: 40px;
+  padding: 8px;
+  border: 1px solid #fff;
+  color: #303972;
+  transition: 0.2s ease;
+  background: #e6ebee;
+  font-size: 20px;
+}
+.container section main table .flex_container .modal2 .modal_content .bottom input[type=submit]:hover {
+  background: #303972;
+  color: white;
 }
 .container section main table .action {
   gap: 15px;
